1999-10-19  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 0.94 released.

1999-10-19  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Merged SH changes.

	* lexer.C, lexer.h: New files.
	* Makefile (INTERFACES): Add them.
	* parser_file.C: Use them.

1999-10-15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* weather.h, weather.C: Move most functionality to weather_old.C.
	* weather_old.h, weather_old.C: New files.
	* Makefile (INTERFACES): Added it.
	* weather_file.C: Derive from WeatherOld.
	* weather_none.C: Ditto.
	* weather_simple.C: Ditto.
	* weather_hourly.C: Ditto.

1999-10-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 0.93 released.

1999-10-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* common.h (sqrt): Check for negative numbers.

1999-10-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log.dai ("Hourly Groundwater"): Changed to table.
	("Total Soil Content"): Ditto.
	("Soil Nitrate Concentration"): Ditto.
	("Preferential Water Flux"): Ditto.
	("Preferential NO3 Transport"): Ditto.
	("Preferential NH4 Transport"): Ditto.
	("Surface Water Balance"): Ditto.
	("Soil Chemicals"): Ditto.
	("Soil Chemicals 0-100 cm"): New model.
	("Weather"): Changed to table.
	("Crop Photosynthesis"): Ditto.
	("Crop Production"): Ditto.
	("Old Crop Production"): Ditto.
	("Vegetation"): Ditto.
	("Surface Chemicals"): Ditto.
	("Bioclimate"): Ditto.

	* printer_file.C (FoundEntry::operator<): Added return type.

1999-10-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log.dai ("N Balance"): Made interval parameterizable.
	("N Balance 0-100 cm"): New parameterization.
	("Root Zone Water Balance"): Use `table', made interval
	parameterizable.
	("Root Zone Water Balance 0-100 cm"): New parameterization.

1999-10-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 0.92 released.

1999-09-24  Per Abrahamsen  <abraham@dina.kvl.dk>

	* surface.C (evap_pond): Avoid negative numbers.

	* bioclimate_std.C (WaterDistribution): Added assertions.
